--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Página de Tributo Andrea Pirlo</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
-
 <body>
     <div class="container">
         <div class="header">
@@ -93,8 +92,9 @@
                 <figcaption>Pirlo comemorando o título, conquistado pelo Milan, com a taça da champions league de 2007
                 </figcaption>
             </figure>
-            <h2>Estatisticas do jogador durante sua carreira</h2>
         </div>
+        <div class="table">
+            <h2>Estatisticas do jogador durante sua carreira</h2>
         <table>
             <tr>
                 <th>Temporada:</th>
@@ -247,6 +247,7 @@
                 <td>0</td>
             </tr>
         </table>
+    </div>
         <div class="moreinfo">
             <h2>Mais informações:</h2>
             <p>Você pode conhecer mais sobre o jogador <a href="https://pt.wikipedia.org/wiki/Andrea_Pirlo">clicando
