--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Página de Tributo Andrea Pirlo</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="header">
@@ -95,159 +96,161 @@
         </div>
         <div class="table">
             <h2>Estatisticas do jogador durante sua carreira</h2>
-        <table>
-            <tr>
-                <th>Temporada:</th>
-                <th>Jogos:</th>
-                <th>Gols:</th>
-                <th>Assistências:</th>
-            </tr>
-            <tr>
-                <td>2017</td>
-                <td>15</td>
-                <td>0</td>
-                <td>1</td>
-            </tr>
-            <tr>
-                <td>2016</td>
-                <td>33</td>
-                <td>1</td>
-                <td>6</td>
-            </tr>
-            <tr>
-                <td>2015</td>
-                <td>13</td>
-                <td>0</td>
-                <td>2</td>
-            </tr>
-            <tr>
-                <td>14/15</td>
-                <td>33</td>
-                <td>5</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>13/14</td>
-                <td>45</td>
-                <td>6</td>
-                <td>8</td>
-            </tr>
-            <tr>
-                <td>12/13</td>
-                <td>45</td>
-                <td>5</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>11/12</td>
-                <td>41</td>
-                <td>3</td>
-                <td>14</td>
-            </tr>
-            <tr>
-                <td>10/11</td>
-                <td>25</td>
-                <td>1</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td>09/10</td>
-                <td>43</td>
-                <td>1</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>08/09</td>
-                <td>29</td>
-                <td>2</td>
-                <td>3</td>
-            </tr>
-            <tr>
-                <td>07/08</td>
-                <td>45</td>
-                <td>5</td>
-                <td>12</td>
-            </tr>
-            <tr>
-                <td>06/07</td>
-                <td>52</td>
-                <td>3</td>
-                <td>10</td>
-            </tr>
-            <tr>
-                <td>05/06</td>
-                <td>49</td>
-                <td>5</td>
-                <td>6</td>
-            </tr>
-            <tr>
-                <td>04/05</td>
-                <td>43</td>
-                <td>5</td>
-                <td>10</td>
-            </tr>
-            <tr>
-                <td>03/04</td>
-                <td>44</td>
-                <td>8</td>
-                <td>8</td>
-            </tr>
-            <tr>
-                <td>02/03</td>
-                <td>42</td>
-                <td>9</td>
-                <td>7</td>
-            </tr>
-            <tr>
-                <td>01/02</td>
-                <td>29</td>
-                <td>2</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>00/01</td>
-                <td>16</td>
-                <td>0</td>
-                <td>2</td>
-            </tr>
-            <tr>
-                <td>99/00</td>
-                <td>30</td>
-                <td>6</td>
-                <td>3</td>
-            </tr>
-            <tr>
-                <td>98/99</td>
-                <td>32</td>
-                <td>0</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>97/98</td>
-                <td>30</td>
-                <td>4</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>96/97</td>
-                <td>18</td>
-                <td>2</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td>95/96</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td>94/95</td>
-                <td>2</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-        </table>
-    </div>
+            <div class="flex-container">
+                <table>
+                    <tr>
+                        <th>Temporada:</th>
+                        <th>Jogos:</th>
+                        <th>Gols:</th>
+                        <th>Assistências:</th>
+                    </tr>
+                    <tr>
+                        <td>2017</td>
+                        <td>15</td>
+                        <td>0</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>2016</td>
+                        <td>33</td>
+                        <td>1</td>
+                        <td>6</td>
+                    </tr>
+                    <tr>
+                        <td>2015</td>
+                        <td>13</td>
+                        <td>0</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>14/15</td>
+                        <td>33</td>
+                        <td>5</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>13/14</td>
+                        <td>45</td>
+                        <td>6</td>
+                        <td>8</td>
+                    </tr>
+                    <tr>
+                        <td>12/13</td>
+                        <td>45</td>
+                        <td>5</td>
+                        <td>11</td>
+                    </tr>
+                    <tr>
+                        <td>11/12</td>
+                        <td>41</td>
+                        <td>3</td>
+                        <td>14</td>
+                    </tr>
+                    <tr>
+                        <td>10/11</td>
+                        <td>25</td>
+                        <td>1</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>09/10</td>
+                        <td>43</td>
+                        <td>1</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>08/09</td>
+                        <td>29</td>
+                        <td>2</td>
+                        <td>3</td>
+                    </tr>
+                    <tr>
+                        <td>07/08</td>
+                        <td>45</td>
+                        <td>5</td>
+                        <td>12</td>
+                    </tr>
+                    <tr>
+                        <td>06/07</td>
+                        <td>52</td>
+                        <td>3</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>05/06</td>
+                        <td>49</td>
+                        <td>5</td>
+                        <td>6</td>
+                    </tr>
+                    <tr>
+                        <td>04/05</td>
+                        <td>43</td>
+                        <td>5</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>03/04</td>
+                        <td>44</td>
+                        <td>8</td>
+                        <td>8</td>
+                    </tr>
+                    <tr>
+                        <td>02/03</td>
+                        <td>42</td>
+                        <td>9</td>
+                        <td>7</td>
+                    </tr>
+                    <tr>
+                        <td>01/02</td>
+                        <td>29</td>
+                        <td>2</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>00/01</td>
+                        <td>16</td>
+                        <td>0</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>99/00</td>
+                        <td>30</td>
+                        <td>6</td>
+                        <td>3</td>
+                    </tr>
+                    <tr>
+                        <td>98/99</td>
+                        <td>32</td>
+                        <td>0</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>97/98</td>
+                        <td>30</td>
+                        <td>4</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>96/97</td>
+                        <td>18</td>
+                        <td>2</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>95/96</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>94/95</td>
+                        <td>2</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
         <div class="moreinfo">
             <h2>Mais informações:</h2>
             <p>Você pode conhecer mais sobre o jogador <a href="https://pt.wikipedia.org/wiki/Andrea_Pirlo">clicando
@@ -255,4 +258,5 @@
         </div>
     </div>
 </body>
+
 </html>
